# mnist-handwritten-digit

./: .gitignore  CMakeLists.txt  test.cpp
img/include/: image.hpp
img/src/: image.cpp
reader/include/: reader.hpp
reader/src/: reader.cpp
